# cronos

./: README.md  pyproject.toml
config/: loader.py  mesocycle_progression.yaml  policy_version.yaml  readiness_adjustment_factors.yaml  readiness_hysteresis.yaml  rpe_thresholds.yaml
domain/: enums.py  events.py  models.py
generation/: macrocycle.py  progression.py  week_template.py
io/: csv_export.py
orchestration/: daily_run.py
persistence/: event_log.py
readiness/: adjustment.py  classification.py  feedback.py
tests/: conftest.py  test_daily_run.py  test_event_log.py  test_macrocycle.py  test_readiness.py  test_week_template.py
training_plan/config/: loader.py  phase_templates.yaml  readiness_thresholds.yaml  taper_curves.yaml
training_plan/domain/: enums.py  models.py
training_plan/generation/: macrocycle.py  progression.py  week_template.py
training_plan/io/: csv_export.py
training_plan/readiness/: adjustment.py  classification.py
training_plan/tests/: test_macrocycle.py  test_readiness.py  test_week_template.py
training_plan/tests/fixtures/: baseline_output.json
